# GenAIBusinessCardScanner

./: .dockerignore  .env.sample  .gitignore  .markdownlint-cli2.yaml  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  docker-compose.yml  export_code.sh  package.json  pnpm-workspace.yaml  smoke_test.sh  smoke_test_dagster.sh
.claude/agents/: project-manager-backlog.md
.gemini/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  (+2 more)
.husky/: pre-commit
backlog/: config.yml
dagster_business_automations/: .env.test  .gitignore  dagster.yaml  lint.sh  pyproject.toml  test.sh  workspace.yaml
dagster_business_automations/config/: system_prompt_template.md
dagster_business_automations/dagster_card_processor/: __init__.py  card_processing_assets.py  dbt_assets.py  email_client_interface.py  finalization_assets.py  postmark_email_client.py  project.py  schema_assets.py  sensors.py
dagster_business_automations/dagster_card_processor/defs/business_card_scanner/gemini/: resources.py
dagster_business_automations/dagster_card_processor/resources/: email_client_resource.py
dagster_business_automations/scripts/: verify_google_sheets.py
dagster_business_automations/tests/: conftest.py  test_assets.py  test_duckdb_resource.py  test_email_client_resource.py  test_finalization.py  test_gemini_resource.py  test_google_sheets_resource.py  test_sensors.py
dagster_business_automations/tests/resources/: test_google_sheets_resource.py
dagster_card_processor/: .env.sample  .env.test  .flake8  .gitignore  README.md  dagster.yaml  pyproject.toml  requirements.txt  sample.env  test.sh
dagster_card_processor/config/: system_prompt_template.md
dagster_card_processor/dagster_card_processor/: __init__.py  card_processing_assets.py  config.py  dbt_assets.py  downstream_assets.py  email_client_interface.py  partitions.py  postmark_email_client.py  project.py  resources.py  schema_assets.py  sensors.py
dagster_card_processor/dagster_card_processor/resources/: __init__.py  duckdb_resource.py  email_client_resource.py  gemini_resource.py  google_sheets_resource.py
dagster_card_processor/dagster_card_processor/tests/: conftest.py  test_assets.py  test_basic.py  test_finalization.py  test_resources.py  test_sensors.py
dagster_card_processor/dbt_project/: dbt_project.yml  profiles.yml
dagster_card_processor/dbt_project/models/: stg_cards_data.sql
dagster_card_processor/dbt_project/models/staging/: schema.yml  stg_cards_data.sql
dagster_card_processor/dbt_project/seeds/: stg_cards_data_sample.csv
dagster_card_processor/scripts/: verify_google_sheets.py  verify_google_sheets_auth.py
dagster_card_processor/tests/: test_email_client_wrapper.py  test_finalization.py  test_sensors.py
dagster_card_processor/tests/resources/: test_duckdb_resource.py  test_email_client_resource.py  test_gemini_resource.py  test_google_sheets_resource.py
data_orchestrator.py/: .dockerignore  Dockerfile
data_orchestrator.py/dagster_project/: .env.sample  .env.test  .gitignore  README.md  healthcheck.py  lint.sh  pyproject.toml  test.sh  workspace.yaml
data_orchestrator.py/dagster_project/config/: .gitignore
data_orchestrator.py/dagster_project/dagster_project/: __init__.py  card_processing_assets.py  config.py  dbt_assets.py  postmark_email_client.py  schema_assets.py  sensors.py
data_orchestrator.py/dagster_project/dagster_project/config/: __init__.py
data_orchestrator.py/dagster_project/dagster_project/defs/: __init__.py
data_orchestrator.py/dagster_project/dagster_project/defs/business_card_scanner/duckdb/: resources.py
data_orchestrator.py/dagster_project/dagster_project/defs/business_card_scanner/gemini/: resources.py
data_orchestrator.py/dagster_project/dagster_project/defs/email_sender/email_client/: resources.py
data_orchestrator.py/dagster_project/scripts/: verify_google_sheets.py  verify_google_sheets_auth.py
data_orchestrator.py/dagster_project/tests/: test_assets.py  test_duckdb_resource.py  test_email_client_resource.py  test_email_client_wrapper.py  test_finalization.py  test_gemini_resource.py  test_google_sheets_resource.py  test_sensors.py
dbt_project/: profiles.yml
docs/: Migration Plan.md  README.md  genai_prompt.md
genai-docs/: README.md  architecture-standards.md  decision-standards.md  design-spec-standards.md  guidelines-standards.md  project-practices.md  system-prompt.md  task-standards.md  user-story-standards.md
scripts/: smoke_test_data_orchestrator.sh
validation_tool.ts/: .dockerignore  .env.dev  .gitignore  DEVELOPMENT.md  Dockerfile  README.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  server.prod.ts  server.ts  tsconfig.json  tsconfig.node.json  tsconfig.test.json  vite.config.ts
(+276 files in other folders)
