# Dagster project configuration for dg CLI
[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_card_processor"

[tool.setuptools]
packages = ["dagster_card_processor"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dagster-card-processor"
version = "0.1.0"
dependencies = [
    "black==25.1.0",
    "dagster-dbt==0.26.20",
    "dagster-dg-cli",
    "dagster-webserver==1.10.20",
    "dagster==1.10.20",
    "dbt-core==1.9.8",
    "dbt-duckdb==1.9.3",
    "flake8==7.3.0",
    "google-generativeai==0.8.5",
    "gspread==5.12.4",
    "oauth2client==4.1.3",
    "postmarker==1.0",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "pytest==8.4.1",
    "python-dotenv==1.1.1",
    "PyYAML==6.0.1",
]

[tool.dagster]
module_name = "dagster_card_processor"

[tool.pytest.ini_options]
filterwarnings = [ "ignore::DeprecationWarning:dbt_common" ]

[tool.coverage.run]
source = ["dagster_card_processor"]
omit = ["tests/*"]
