[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "dagster_card_processor"

[tool.pytest.ini_options]
filterwarnings = [ "ignore::DeprecationWarning:dbt_common" ]

[tool.coverage.run]
omit = [
    # omit tests directory
    "dagster_card_processor/tests/*",
    ]