# Dagster project configuration for dg CLI
[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_project"

[tool.setuptools]
packages = ["dagster_project"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dagster-card-processor"
requires-python = "==3.12.11"
version = "0.1.0"
dependencies = [
    "dagster-dbt==0.27.4",
    "dagster-dg-cli",
    "dagster-webserver==1.11.7",
    "dagster==1.11.4",
    "dbt-core==1.10.6",
    "dbt-duckdb==1.9.4",
    "google-generativeai==0.8.5",
    "gspread==6.2.1",
    "oauth2client==4.1.3",
    "postmarker==1.0",
    "python-dotenv==1.1.1"
]

[dependency-groups]
dev = [
    "black==25.1.0",
    "flake8==7.3.0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pytest-cov==6.2.1",
    "pytest-mock==3.14.1",
    "pytest==8.4.1",
]

[tool.dagster]
module_name = "dagster_project"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:dbt_common",
    "ignore::DeprecationWarning:pydantic"
]

[tool.coverage.run]
source = ["dagster_project"]
omit = ["tests/*"]
