# Dagster project configuration for dg CLI
[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_project"

[tool.setuptools]
packages = ["dagster_project"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dagster-card-processor"
requires-python = "==3.12.11"
version = "0.1.0"
dependencies = [
    "dagster-dbt==0.27.10",
    "dagster-dg-cli==1.11.9",
    "dagster-webserver==1.11.9",
    "dagster==1.11.9",
    "dbt-core==1.10.11",
    "dbt-duckdb==1.9.6",
    "google-api-core==2.25.1",
    "google-genai==1.36.0",
    "gspread==6.2.1",
    "oauth2client==4.1.3",
    "postmarker==1.0",
    "python-dotenv==1.1.1",
]

[dependency-groups]
dev = [
    "black==25.1.0",
    "flake8==7.3.0",
    "numpy==2.3.3",
    "pandas==2.3.2",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.0",
    "pytest==8.4.2",
]

[tool.dagster]
module_name = "dagster_project"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:dbt_common",
    "ignore::DeprecationWarning:pydantic"
]

[tool.coverage.run]
source = ["dagster_project"]
omit = ["tests/*"]